# weather-scraper

./: .gitignore  Dockerfile  README.md  docker-compose-influx.yaml  docker-compose.prod-scraper-only.yaml  docker-compose.prod-w-influx.yaml  docker-compose.yaml  pyproject.toml
configs/: config.json  influx_dashboard_ibc.json
tests/: test_weather_scraper.py
weather_scraper/: logger.py  main.py
