[tool.poetry]
name = "influxdb"
version = "0.1.0"
description = ""
authors = ["Martin Ron <martin.ron@factorio.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
influxdb-client = "^1.30.0"
pause = "^0.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
